--- a/public/templates/activity-history.html
+++ b/public/templates/activity-history.html
@@ -37,6 +37,7 @@
           <option value="">Tất cả</option>
           <option value="device_id">Thiết bị</option>
           <option value="action">Hành động</option>
+          <option value="created_at">Thời gian</option>
         </select>
       </div>
 
@@ -44,10 +45,10 @@
         <table id="historyTable">
           <thead>
             <tr>
-              <th data-sort="id" style="width:110px">ID</th>
-              <th data-sort="device_id">Thiết bị</th>
-              <th data-sort="action">Hoạt động</th>
-              <th data-sort="created_at" style="width:220px">Thời gian</th>
+              <th data-sort="id" style="width:110px"> <span>ID </span></th>
+              <th data-sort="device_id"> <span>Thiết bị </span></th>
+              <th data-sort="action"><span>Hoạt động </span></th>
+              <th data-sort="created_at" style="width:220px"><span>Thời gian </span></th>
             </tr>
           </thead>
           <tbody id="historyTbody"></tbody>
