Last update of the day

--- a/public/templates/activity-history.html
+++ b/public/templates/activity-history.html
@@ -36,7 +36,7 @@
         <select id="historyFieldSelect" class="filter" title="Trường">
           <option value="">Tất cả</option>
           <option value="device_id">Thiết bị</option>
-          <option value="action">Hành động</option>
+          <option value="action">Hoạt động</option>
           <option value="created_at">Thời gian</option>
         </select>
       </div>
