--- a/public/templates/profile.html
+++ b/public/templates/profile.html
@@ -46,7 +46,7 @@
             <label>Link Github</label>
             <div class="github-input">
             <a href="https://github.com/hoamai2203/IoT_Project" target="_blank" 
-            style="display: block; box-sizing: border-box; width: 100%; padding: 10px; margin: 6px 0px 12px; border: 1px solid rgb(221, 221, 221); border-radius: 6px; background: rgb(251, 236, 236); color: rgb(51, 51, 51); text-decoration: none; text-align: left:"";">Link tới dự án GitHub</a>
+            style="display: block; box-sizing: border-box; width: 100%; padding: 10px; margin: 6px 0px 12px; border: 1px solid rgb(221, 221, 221); border-radius: 6px; background: rgb(251, 236, 236); color: rgb(51, 51, 51); text-decoration: none; text-align: left:"";">IoT_Project</a>
             
               
             </div>
@@ -54,7 +54,7 @@
             <div class="postman-input">
             
             <a href="https://gh7777-1521.postman.co/workspace/Test~0f8e0f39-9d6e-4353-bba6-13fd9f0325e5/collection/44284033-90d37ad7-5ccb-495b-8c2b-4cbb2a28526e?action=share&source=copy-link&creator=44284033" target="_blank" 
-            style="display: block; box-sizing: border-box; width: 100%; padding: 10px; margin: 6px 0px 12px; border: 1px solid rgb(221, 221, 221); border-radius: 6px; background: rgb(251, 236, 236); color: rgb(51, 51, 51); text-decoration: none; text-align: left:"";">Link tới bộ sưu tập Postman</a>
+            style="display: block; box-sizing: border-box; width: 100%; padding: 10px; margin: 6px 0px 12px; border: 1px solid rgb(221, 221, 221); border-radius: 6px; background: rgb(251, 236, 236); color: rgb(51, 51, 51); text-decoration: none; text-align: left:"";">IoT_Project_Test</a>
           </div>
         </div>
 
